<resources>
    <string name="app_name">BeRealTest</string>

    <string name="signInTitle">Welcome</string>
    <string name="signIn">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="error">Something went wrong</string>


    <string name="fileExplorerTitle">File Explorer</string>
    <string name="contentDescription_DirectoryItem">Directory %1$s!</string>
    <string name="contentDescription_NewDirectory">Create Directory</string>
    <string name="contentDescription_Confirm">Confirm</string>
    <string name="contentDescription_ImageItem">Image %1$s!</string>
    <string name="directoryName">Directory Name</string>
    <string name="createDirectoryTitle">Create Directory</string>

    <string name="contentDescriptionImage">Selected Image</string>
    <string name="filenameInfo">Filename must be alphanumeric</string>
</resources>
